
syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "items.proto";

option java_multiple_files = true;
option java_package = "via.sep4.protobuf";
option java_outer_classname = "OrderItemProto";

service OrderItemService {
  rpc getOrderItem(google.protobuf.Int32Value) returns (OrderItem) {};
  rpc getOrderItemsBy(google.protobuf.Empty) returns (stream OrderItem) {};
  rpc addOrderItem(OrderItem) returns (google.protobuf.Empty) {};
  rpc updateOrderItem(OrderItem) returns (google.protobuf.Empty) {};
  rpc deleteOrderItem(OrderItem) returns (google.protobuf.Empty) {};
}

message OrderItem {
  int32 id = 1;
  int32 amount = 2;
  Item item = 3;
}